--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "lodash": "^4.17.21",
         "vue-multiselect": "^3.0.0-beta.3"
     }
 }
