--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.16",
         "lodash": "^4.17.21",
-        "vue-multiselect": "^3.0.0-beta.3"
+        "vue-multiselect": "^3.0.0-beta.3",
+        "vue3-circle-progress": "^1.0.7"
     }
 }
