--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@headlessui/vue": "^1.7.16",
+        "@tailwindcss/aspect-ratio": "^0.4.2",
         "lodash": "^4.17.21",
         "vue-multiselect": "^3.0.0-beta.3",
         "vue3-circle-progress": "^1.0.7"
