--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@headlessui/vue": "^1.7.16",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "lodash": "^4.17.21",
+        "swiper": "^11.0.5",
         "vue-multiselect": "^3.0.0-beta.3",
         "vue3-circle-progress": "^1.0.7"
     }
